bat.bool1.diff21.Diff21.scala.error
Compilation error:
Diff21:5: error: missing parameter type
    _ => Math.abs(2*(n-21))
    ^